--- a/.github/workflows/email-txt.yml
+++ b/.github/workflows/email-txt.yml
@@ -48,7 +48,7 @@ jobs:
         id: parsed-output
         run: |
                 
-                echo "OUTPUT= $(echo ${{steps.changed-files.outputs.modified_files}} |  sed 's/\,/\\n/g' )" >> $GITHUB_ENV    
+             echo "OUTPUT= $(echo ${{steps.changed-files.outputs.modified_files}} |  sed 's/\,/\\n/g' )" >> $GITHUB_ENV    
                 
       - name: Send mail  
         uses: dawidd6/action-send-mail@v3
@@ -71,18 +71,17 @@ jobs:
            from:  ${{env.AUTHOR}}
         
            body: |
-              
                       
-              Branch: ${{github.ref}} 
-              Revision: ${{ github.event.pull_request.merge_commit_sha }}  
-              Author: ${{ env.AUTHOR}} 
-              Link: ${{github.event.pull_request._links.html.href}}         
-              Log Message: 
+                    " Branch :"  ${{github.ref}} 
+                     Revision ${{ github.event.pull_request.merge_commit_sha }}  
+                     Author  ${{ env.AUTHOR}} 
+                     Link  ${{github.event.pull_request._links.html.href}}         
+                     Log Message  
                            ${{env.LOG}} 
                           
-              ${{env.OUTPUT}} 
-              Raw Text:
-              Resolves #21073\r\n\r\nThis fixes a bug where an actual argument was always considered a \"use\" upon a call to a virtually-dispatched method even when the corresponding formal had a ref or [in]out intent.\r\n\r\nThe bug was observed when such an actual argument was an array indexing expression, which involved return intent overloading. Because of the bug, the return-value overload was chosen instead of the return-ref one.\r\n\r\nNext steps: check if this bug can occur upon calls to ftable-ed functions.\r\n\r\nTesting: standard paratest; gasnet paratest over multilocale tests.
+                     ${{env.OUTPUT}} 
+              
+                     Resolves #21073\r\n\r\nThis fixes a bug where an actual argument was always considered a \"use\" upon a call to a virtually-dispatched method even when the corresponding formal had a ref or [in]out intent.\r\n\r\nThe bug was observed when such an actual argument was an array indexing expression, which involved return intent overloading. Because of the bug, the return-value overload was chosen instead of the return-ref one.\r\n\r\nNext steps: check if this bug can occur upon calls to ftable-ed functions.\r\n\r\nTesting: standard paratest; gasnet paratest over multilocale tests.
 
               
            # Optional converting Markdown to HTML (set content_type to text/html too):
