--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -238,3 +238,4 @@ endif()
 # message(DEBUG "${CHPL_HOST_BUNDLED_LINK_ARGS} ${CHPL_HOST_SYSTEM_LINK_ARGS}")
 add_subdirectory(compiler)
 add_subdirectory(frontend)
+add_subdirectory(tools)
