Improve uAST dumps for the rest of the nodes
---
Signed-off-by: Michael Ferguson <mppf@users.noreply.github.com>

--- a/frontend/lib/uast/Makefile.include
+++ b/frontend/lib/uast/Makefile.include
@@ -72,8 +72,9 @@ FRONTEND_UAST_SRCS = \
   Import.cpp \
   Include.cpp \
   IndexableLoop.cpp \
-  Interface.cpp \
   IntLiteral.cpp \
+  IntentList.cpp \
+  Interface.cpp \
   Label.cpp \
   Let.cpp \
   Literal.cpp \
