fix(build): add python 2.7 build compatibility
* explicitly set CHPL_CMAKE_PYTHON and use it when
  we call python scripts from CMake

* remove f strings from the python scripts called from
  CMake for python2 compatibility

* remove subprocess.run from python scripts for python2
  compatibility

Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -345,7 +345,8 @@ if (DEFINED ENV{GITHUB_ACTIONS})
     execute_process(COMMAND git config --global --add safe.directory ${CHPL_HOME})
   endif()
 endif()
-
+set(CHPL_CMAKE_PYTHON $ENV{CHPL_MAKE_PYTHON})
+message(STATUS "Using Python: ${CHPL_CMAKE_PYTHON}")
 # message(DEBUG "${CHPL_HOST_BUNDLED_LINK_ARGS} ${CHPL_HOST_SYSTEM_LINK_ARGS}")
 add_subdirectory(compiler)
 add_subdirectory(frontend)
