--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -55,19 +55,28 @@ include_directories(
         )
 
 add_executable(chpl)
+set(CHPL_CMAKE_PYTHON $ENV{CHPL_MAKE_PYTHON})
 if (NOT EXISTS ${SRC_DIR}/main/LICENSE)
-  execute_process(COMMAND ${SRC_DIR}/../util/config/generate-license ${SRC_DIR}/../ ${SRC_DIR}/main
+  execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
+                          ${SRC_DIR}/../util/config/generate-license
+                          ${SRC_DIR}/../
+                          ${SRC_DIR}/main
                   OUTPUT_FILE ${SRC_DIR}/main/LICENSE)
 endif()
 
 if (NOT EXISTS ${SRC_DIR}/main/COPYRIGHT)
-  execute_process(COMMAND ${SRC_DIR}/../util/config/generate-copyright ${SRC_DIR}/../ ${SRC_DIR}/main
-  OUTPUT_FILE ${SRC_DIR}/main/COPYRIGHT)
+  execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
+                          ${SRC_DIR}/../util/config/generate-copyright
+                          ${SRC_DIR}/../
+                          ${SRC_DIR}/main
+                  OUTPUT_FILE ${SRC_DIR}/main/COPYRIGHT)
 endif()
 
 if (NOT EXISTS ${SRC_DIR}/codegen/reservedSymbolNames.h)
-  execute_process(COMMAND ${SRC_DIR}/../util/config/generate-reservedSymbolNames ${SRC_DIR}/codegen
-  OUTPUT_FILE ${SRC_DIR}/codegen/reservedSymbolNames.h)
+  execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
+                          ${SRC_DIR}/../util/config/generate-reservedSymbolNames
+                          ${SRC_DIR}/codegen
+                  OUTPUT_FILE ${SRC_DIR}/codegen/reservedSymbolNames.h)
 endif()
 
 add_subdirectory(AST)
