--- a/frontend/lib/resolution/Makefile.include
+++ b/frontend/lib/resolution/Makefile.include
@@ -24,6 +24,7 @@ FRONTEND_RESOLUTION_SRCS =                          \
            Resolver.cpp                             \
            call-init-deinit.cpp                     \
            can-pass.cpp                             \
+           signature-checks.cpp                     \
            copy-elision.cpp                         \
            default-functions.cpp                    \
            disambiguation.cpp                       \
