remove *.h from ALL_SRCS in some frontend subdirs
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/frontend/lib/framework/Makefile.include
+++ b/frontend/lib/framework/Makefile.include
@@ -18,7 +18,7 @@
 
 FRONTEND_FRAMEWORK_OBJDIR = $(COMPILER_BUILD)/frontend/lib/framework
 
-ALL_SRCS += ../frontend/lib/framework/*.h ../frontend/lib/framework/*.cpp
+ALL_SRCS += ../frontend/lib/framework/*.cpp
 
 FRONTEND_FRAMEWORK_SRCS =                           \
            compiler-configuration.cpp               \
