--- a/frontend/lib/types/Makefile.include
+++ b/frontend/lib/types/Makefile.include
@@ -18,7 +18,7 @@
 
 FRONTEND_TYPES_OBJDIR = $(COMPILER_BUILD)/frontend/lib/types
 
-ALL_SRCS += ../frontend/lib/types/*.h ../frontend/lib/types/*.cpp
+ALL_SRCS += ../frontend/lib/types/*.cpp
 
 FRONTEND_TYPES_SRCS = \
   AnyType.cpp \
