--- a/frontend/lib/uast/Makefile.include
+++ b/frontend/lib/uast/Makefile.include
@@ -18,7 +18,7 @@
 
 FRONTEND_UAST_OBJDIR = $(COMPILER_BUILD)/frontend/lib/uast
 
-ALL_SRCS += ../frontend/lib/uast/*.h ../frontend/lib/uast/*.cpp
+ALL_SRCS += ../frontend/lib/uast/*.cpp
 
 FRONTEND_UAST_SRCS = \
   AggregateDecl.cpp \
