fix(build): update generated files if they differ
* changes the behavior of CMake to no longer check
  if LICENSE, COPYRIGHT, or reservedSymbols.h exist
  before calling the python script that would update
  them

* update the python scripts for generating LICENSE,
  COPYRIGHT, and reservedSymbols.h to write their
  contents to a temp file and then use the python script
  `update-if-different` to update the files in only
  in the case that their contents differ

* this should fix issues where an existing repository
  holds an older version of these generated files, those
  files would not be updated with the new contents at build
  unless the old generated files were removed first

Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -56,28 +56,29 @@ include_directories(
 
 add_executable(chpl)
 set(CHPL_CMAKE_PYTHON $ENV{CHPL_MAKE_PYTHON})
-if (NOT EXISTS ${SRC_DIR}/main/LICENSE)
-  execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
-                          ${SRC_DIR}/../util/config/generate-license
-                          ${SRC_DIR}/../
-                          ${SRC_DIR}/main
-                  OUTPUT_FILE ${SRC_DIR}/main/LICENSE)
-endif()
 
-if (NOT EXISTS ${SRC_DIR}/main/COPYRIGHT)
-  execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
-                          ${SRC_DIR}/../util/config/generate-copyright
-                          ${SRC_DIR}/../
-                          ${SRC_DIR}/main
-                  OUTPUT_FILE ${SRC_DIR}/main/COPYRIGHT)
-endif()
+# Write the LICENSE file, or update the existing file if the contents are different
+execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
+                        ${SRC_DIR}/../util/config/generate-license
+                        ${SRC_DIR}/../
+                        ${SRC_DIR}/main
+                        --chpl-home=${CHPL_HOME})
 
-if (NOT EXISTS ${SRC_DIR}/codegen/reservedSymbolNames.h)
-  execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
-                          ${SRC_DIR}/../util/config/generate-reservedSymbolNames
-                          ${SRC_DIR}/codegen
-                  OUTPUT_FILE ${SRC_DIR}/codegen/reservedSymbolNames.h)
-endif()
+
+# Write the COPYRIGHT file, or update the existing file if the contents are different
+execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
+                        ${SRC_DIR}/../util/config/generate-copyright
+                        ${SRC_DIR}/../
+                        ${SRC_DIR}/main
+                        --chpl-home=${CHPL_HOME})
+
+
+# Write the reservedSymbolNames.h file, or update the existing file if the contents are different
+execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
+                        ${SRC_DIR}/../util/config/generate-reservedSymbolNames
+                        ${SRC_DIR}/codegen
+                        --chpl-home=${CHPL_HOME})
+
 
 add_subdirectory(AST)
 add_subdirectory(adt)
