fix(build): use custom_command for generating files
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -57,28 +57,40 @@ include_directories(
 add_executable(chpl)
 set(CHPL_CMAKE_PYTHON $ENV{CHPL_MAKE_PYTHON})
 
-# Write the LICENSE file, or update the existing file if the contents are different
-execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
-                        ${SRC_DIR}/../util/config/generate-license
-                        ${SRC_DIR}/../
-                        ${SRC_DIR}/main
-                        --chpl-home=${CHPL_HOME})
+# Write the compiler/main/LICENSE file, or update the existing file if the
+# the $CHPL_HOME/LICENSE file has been modified
+add_custom_command(
+  OUTPUT ${SRC_DIR}/main/LICENSE
+  COMMAND ${CHPL_CMAKE_PYTHON}
+          ${SRC_DIR}/../util/config/generate-license
+          ${SRC_DIR}/../
+          ${SRC_DIR}/main
+  DEPENDS ${SRC_DIR}/../LICENSE
+  COMMENT "writing LICENSE file updates..."
+  VERBATIM)
 
+# Write the compiler/main/COPYRIGHT file, or update the existing file if the
+# the $CHPL_HOME/COPYRIGHT file has been modified
+add_custom_command(
+  OUTPUT ${SRC_DIR}/main/COPYRIGHT
+  COMMAND ${CHPL_CMAKE_PYTHON}
+          ${SRC_DIR}/../util/config/generate-copyright
+          ${SRC_DIR}/../
+          ${SRC_DIR}/main
+  DEPENDS ${SRC_DIR}/../COPYRIGHT
+  COMMENT "writing COPYRIGHT file updates..."
+  VERBATIM)
 
-# Write the COPYRIGHT file, or update the existing file if the contents are different
-execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
-                        ${SRC_DIR}/../util/config/generate-copyright
-                        ${SRC_DIR}/../
-                        ${SRC_DIR}/main
-                        --chpl-home=${CHPL_HOME})
-
-
-# Write the reservedSymbolNames.h file, or update the existing file if the contents are different
-execute_process(COMMAND ${CHPL_CMAKE_PYTHON}
-                        ${SRC_DIR}/../util/config/generate-reservedSymbolNames
-                        ${SRC_DIR}/codegen
-                        --chpl-home=${CHPL_HOME})
-
+# Write the reservedSymbolNames.h file, or update the existing file if the
+# contents of ${SRC_DIR}/codegen/reservedSymbolNames have changed
+add_custom_command(
+  OUTPUT ${SRC_DIR}/codegen/reservedSymbolNames.h
+  COMMAND ${CHPL_CMAKE_PYTHON}
+          ${SRC_DIR}/../util/config/generate-reservedSymbolNames
+          ${SRC_DIR}/codegen
+  DEPENDS ${SRC_DIR}/codegen/reservedSymbolNames
+  COMMENT "writing reservedSymbolNames.h file updates..."
+  VERBATIM)
 
 add_subdirectory(AST)
 add_subdirectory(adt)
