--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -3,7 +3,7 @@ on:
     # this workflow is intended to run on merges from a forked repo to main(base-repo). Use pull_request_target
     # this will provide read access to the secrets in main
     push:
-    #pull_request_target:
+    pull_request:
      # types:
       #  - closed
       
@@ -25,11 +25,11 @@ jobs:
         env:
           COMMIT_URL: ${{github.event.pull_request._links.commits.href}}
           LOG: ${{github.event.pull_request.body}}
-         uses: nick-fields/retry@v2
-        with:
-        max_attempts: 3
-        retry_on: error
-        timeout_seconds: 60   
+        uses: nick-fields/retry@v2
+          with:
+          max_attempts: 3
+          retry_on: error
+          timeout_seconds: 60   
         run: |
               curl --location --request GET $COMMIT_URL --header 'X-API-Key: ${{ secrets.GITHUB_TOKEN}}' -o commits.json
               echo "AUTHOR=$(jq -r '.[0].commit.author.name' commits.json)" >> $GITHUB_ENV   
