Add InitErrorHandling.cpp to CMake build list
----
Signed-off-by: Lydia Duncan <lydia-duncan@users.noreply.github.com>

--- a/compiler/passes/CMakeLists.txt
+++ b/compiler/passes/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SRCS
     externCResolve.cpp
     flattenClasses.cpp
     flattenFunctions.cpp
+    InitErrorHandling.cpp
     initializerRules.cpp
     InitNormalize.cpp
     insertLineNumbers.cpp
