Initial implementation of deprecation query and changes to production
Signed-off-by: David Longnecker <dlongnecke-cray@users.noreply.github.com>

--- a/frontend/test/resolution/CMakeLists.txt
+++ b/frontend/test/resolution/CMakeLists.txt
@@ -19,6 +19,7 @@ comp_unit_test(testCallInitDeinit)
 comp_unit_test(testCanPass)
 comp_unit_test(testClasses)
 comp_unit_test(testCopyElision)
+comp_unit_test(testDeprecationUnstable)
 comp_unit_test(testDisambiguation)
 comp_unit_test(testEnums)
 comp_unit_test(testErrorGuard)
