refactor(uast): rename Attributes to AttributeGroup
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/frontend/lib/uast/Makefile.include
+++ b/frontend/lib/uast/Makefile.include
@@ -28,7 +28,7 @@ FRONTEND_UAST_SRCS = \
   AstNode.cpp \
   AstTag.cpp \
   As.cpp \
-  Attributes.cpp \
+  AttributeGroup.cpp \
   Begin.cpp \
   Block.cpp \
   BoolLiteral.cpp \
