refactor(uast): rearrange method in source, remove commented code
* add a new Attribute node that will become the child of
  the AttributeGroup

* update the parser to recognize attributes as an @ followed by
  an identifier and optional actual list

Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/frontend/lib/uast/CMakeLists.txt
+++ b/frontend/lib/uast/CMakeLists.txt
@@ -25,6 +25,7 @@ target_sources(ChplFrontend-obj
                AstNode.cpp
                AstTag.cpp
                As.cpp
+               Attribute.cpp
                AttributeGroup.cpp
                Begin.cpp
                Block.cpp
