fix(build): pass host compiler to cmake for test-dyno target
* add flags for cmake_c_compiler and cmake_cxx_compiler to be
  passed for the test-dyno target, similar to how those
  flags are passed for the chpl and chpldoc targets. This is
  to address a failure to build the test-dyno target on
  chapcs, with the following error:
  `c++: unrecognized command line option: C++14`

Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/frontend/Makefile.help
+++ b/frontend/Makefile.help
@@ -62,7 +62,9 @@ $(LIBCOMPILER_BUILD_DIR):
 	    $(LIB_CMAKE_ARG) \
 	    $(SDKROOT_ARG) \
 	    -DDYNO_LINTERS_CLANG_CMAKE_PATH='$(CLANG_CMAKE_DIR)' \
-	    -DBUILD_SHARED_LIBS=OFF
+	    -DBUILD_SHARED_LIBS=OFF \
+	    -DCMAKE_C_COMPILER=$(CHPL_MAKE_HOST_CC) \
+	    -DCMAKE_CXX_COMPILER=$(CHPL_MAKE_HOST_CXX)
 
 parser: $(LIBCOMPILER_BUILD_DIR) FORCE
 	cd $(LIBCOMPILER_BUILD_DIR)/frontend/lib/parsing && $(CMAKE) --build . --target parser
