Rename libdyno target to ChplFrontend
---
Signed-off-by: Michael Ferguson <mppf@users.noreply.github.com>

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -104,6 +104,6 @@ add_subdirectory(parser)
 add_subdirectory(passes)
 add_subdirectory(resolution)
 add_subdirectory(util)
-add_dependencies(chpl libdyno)
+add_dependencies(chpl ChplFrontend)
 target_compile_options(chpl PUBLIC SHELL:$<$<COMPILE_LANGUAGE:CXX>:${CHPL_LLVM_COMP_ARGS}>)
-target_link_libraries(chpl PUBLIC ${CHPL_LLVM_LINK_ARGS} libdyno)
+target_link_libraries(chpl PUBLIC ${CHPL_LLVM_LINK_ARGS} ChplFrontend)
