--- a/frontend/lib/CMakeLists.txt
+++ b/frontend/lib/CMakeLists.txt
@@ -45,24 +45,24 @@ add_library(git-sha-obj OBJECT ${CMAKE_CURRENT_SOURCE_DIR}/util/git-version.cpp)
 # git-sha-obj for both a static and dynamic library
 set_property(TARGET git-sha-obj PROPERTY POSITION_INDEPENDENT_CODE 1)
 
-add_library(libdyno-obj OBJECT)
+add_library(ChplFrontend-obj OBJECT)
 # turn on position-independent code so we can use the same
 # dyno-obj for both a static and dynamic library
-set_property(TARGET libdyno-obj PROPERTY POSITION_INDEPENDENT_CODE 1)
+set_property(TARGET ChplFrontend-obj PROPERTY POSITION_INDEPENDENT_CODE 1)
 
 # Include the public library .h files as well as any generated .h files
-target_include_directories(libdyno-obj PUBLIC
+target_include_directories(ChplFrontend-obj PUBLIC
                            ${CHPL_MAIN_INCLUDE_DIR}
                            ${CHPL_INCLUDE_DIR})
 
 # Library code can also use headers from the lib/ directory
 # but these are not to be public
-target_include_directories(libdyno-obj PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ChplFrontend-obj PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 # SHELL: is needed here to remove unwanted quotes from the list of arguments
 # COMPILE_LANGUAGE:CXX is needed here to make sure we only set the flags
 # for C++ files, not C files.
-target_compile_options(libdyno-obj PUBLIC
+target_compile_options(ChplFrontend-obj PUBLIC
                        SHELL:$<$<COMPILE_LANGUAGE:CXX>:${CHPL_LLVM_COMP_ARGS}>)
 
 add_subdirectory(immediates)
@@ -74,13 +74,14 @@ add_subdirectory(uast)
 add_subdirectory(util)
 
 
-# Don't build the git-sha-obj into libdyno if CHPL_DONT_BUILD_SHA is set in the
-# environment * note that the value doesn't matter, just the presence of the var
-add_library(libdyno SHARED
-            $<TARGET_OBJECTS:libdyno-obj>
+# Don't build the git-sha-obj into ChplFrontend if CHPL_DONT_BUILD_SHA is set
+# in the environment. Note that the value doesn't matter, just the presence of
+# the var
+add_library(ChplFrontend SHARED
+            $<TARGET_OBJECTS:ChplFrontend-obj>
             $<TARGET_OBJECTS:git-sha-obj>)
 
-target_include_directories(libdyno PUBLIC
+target_include_directories(ChplFrontend PUBLIC
                            ${CHPL_MAIN_INCLUDE_DIR}
                            ${CHPL_INCLUDE_DIR})
 
@@ -95,39 +96,39 @@ if(APPLE)
   # link the LLVM dependencies with the generated .dylib
   # (we get linker errors on Mac OS X here if it uses INTERFACE)
   # an alternative would be to add link option -undefined dynamic_lookup
-  target_link_libraries(libdyno PUBLIC ${CHPL_LLVM_LINK_ARGS})
+  target_link_libraries(ChplFrontend PUBLIC ${CHPL_LLVM_LINK_ARGS})
 elseif(CYGWIN)
   # (we also get linker errors on Cygwin if it uses INTERFACE here)
-  target_link_libraries(libdyno PUBLIC ${CHPL_LLVM_LINK_ARGS})
+  target_link_libraries(ChplFrontend PUBLIC ${CHPL_LLVM_LINK_ARGS})
 else()
   # Using PUBLIC here causes problems in some configurations with LLVM<14
   # when the LLVM libraries are included in the .so generated here
   # and also linked in statically with the resulting executable.
   # With INTERFACE, the LLVM libraries are only linked with at
   # the time that this library is used.
-  target_link_libraries(libdyno INTERFACE ${CHPL_LLVM_LINK_ARGS})
+  target_link_libraries(ChplFrontend INTERFACE ${CHPL_LLVM_LINK_ARGS})
 endif()
 
 # TODO: Get printchplenv output proper so that we don't need to SHELL here
-target_compile_options(libdyno PUBLIC
+target_compile_options(ChplFrontend PUBLIC
                        SHELL:$<$<COMPILE_LANGUAGE:CXX>:${CHPL_LLVM_COMP_ARGS}>)
 
 
 # TODO: ADDITIONAL_CLEAN_FILES requires cmake v3.15 ...
 #       Can we find another way to mark these files for cleanup?
-set_target_properties(libdyno PROPERTIES
+set_target_properties(ChplFrontend PROPERTIES
                       ADDITIONAL_CLEAN_FILES
                       ${CMAKE_CURRENT_SOURCE_DIR}/util/git-version.cpp)
 
 
-# install libdyno
+# install ChplFrontend
 # TODO: also install headers with PUBLIC_HEADER DESTINATION <dir>
 if (INSTALLATION_MODE STREQUAL "prefix")
-  install(TARGETS libdyno
+  install(TARGETS ChplFrontend
           LIBRARY DESTINATION
           "lib/chapel/${CHPL_MAJOR_VERSION}.${CHPL_MINOR_VERSION}/compiler")
 else()
-  install(TARGETS libdyno
+  install(TARGETS ChplFrontend
           LIBRARY DESTINATION
           "lib/compiler/${CHPL_HOST_BIN_SUBDIR}")
 endif()
