Move frontend makefile stuff to compiler/Makefile
the purpose here is to reuse the cmake flags

---
Signed-off-by: Michael Ferguson <mppf@users.noreply.github.com>

--- a/Makefile.devel
+++ b/Makefile.devel
@@ -62,18 +62,15 @@ test: spectests FORCE
 	cd examples && start_test
 
 frontend-docs: FORCE
-	@cd frontend && $(MAKE) -f Makefile.help frontend-docs
+	@cd compiler && $(MAKE) frontend-docs
 
-clobber-frontend: FORCE
-	@cd frontend && $(MAKE) -f Makefile.help clobber-frontend
+test-frontend: FORCE
+	@cd compiler && $(MAKE) test-frontend
 
-test-frontend: frontend FORCE
-	@cd frontend && $(MAKE) -f Makefile.help test-frontend
-
-test-dyno: test-frontend FORCE
+test-dyno: FORCE test-frontend
 
 run-frontend-linters: FORCE
-	@cd frontend && $(MAKE) -f Makefile.help run-frontend-linters
+	@cd compiler && $(MAKE) run-frontend-linters
 
 run-dyno-linters: run-frontend-linters FORCE
 
