TESTING ONLY --DO NOT MERGE
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -3,7 +3,8 @@ on:
     # this workflow is intended to run on merges from a forked repo to main(base-repo). Use pull_request_target
     # this will provide read access to the secrets in main
     #pull_request_target:
-    pull_request
+    push:
+    pull_request:
       #types:
         #- closed
       
@@ -30,7 +31,7 @@ jobs:
           max_attempts: 3
           retry_on: error
           timeout_seconds: 60  
-        command: |
+          command: |
               curl --location --request GET $COMMIT_URL --header 'X-API-Key: ${{ secrets.GITHUB_TOKEN}}' -o commits.json
               echo "AUTHOR=$(jq -r '.[0].commit.author.name' commits.json)" >> $GITHUB_ENV   
               echo "LINK=$(jq -r '.[0].html_url' commits.json)" >> $GITHUB_ENV
