TESTING ONLY --DO NOT MERGE
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -36,7 +36,7 @@ jobs:
               echo $? 
               echo "AUTHOR=$(jq -r '.[0].commit.author.name' commits.json)" >> $GITHUB_ENV   
               echo "LINK=$(jq -r '.[0].html_url' commits.json)" >> $GITHUB_ENV
-              jq  '.[0].commit.message' commits.json)| awk -F'\\\\n' '{print $1}' | sed 's/\"//g'
+              jq  '.[0].commit.message' commits.json | awk -F'\\\\n' '{print $1}' | sed 's/\"//g'
               $?
               echo "MESSAGE=$((jq  '.[0].commit.message' commits.json)| awk -F'\\\\n' '{print $1}' | sed 's/\"//g')" >> $GITHUB_ENV 
               echo $?
