--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -33,11 +33,12 @@ jobs:
           timeout_seconds: 60  
           command: |
               curl --location --request GET $COMMIT_URL --header 'X-API-Key: ${{ secrets.GITHUB_TOKEN}}' -o commits.json
-              echo $? 
+              if [$?  -ne 0 ]; then
+                echo "curl command to get commits payload failed"
+                exit 2
+              fi              
               echo "AUTHOR=$(jq -r '.[0].commit.author.name' commits.json)" >> $GITHUB_ENV   
               echo "LINK=$(jq -r '.[0].html_url' commits.json)" >> $GITHUB_ENV
-              jq  '.[0].commit.message' commits.json | awk -F'\\\\n' '{print $1}' | sed 's/\"//g'
-              $?
               echo "MESSAGE=$((jq  '.[0].commit.message' commits.json)| awk -F'\\\\n' '{print $1}' | sed 's/\"//g')" >> $GITHUB_ENV 
               echo $?
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
